test/fails/bad_geo/par_basics2.lgl
tag a is vec<2>;
tag b is vec<2>;
tag par<`t : vec<2>> is vec<3>;

void main() {
    par<b> p = [1., 1., 1.];
    par<a>->a asA = [[1., 0., 0.], [0., 1., 0.]];
    
    print (asA * p);
}